--- a/src/Detail.scss
+++ b/src/Detail.scss
@@ -4,6 +4,14 @@ $mainColor : #ff0000;
     color : $mainColor;
 }
 
+.wow-enter {
+    opacity : 0;
+}
+.wow-enter-active {
+    opacity:  1;
+    transition : all 500ms;
+}
+
 .my-alert2 {
     @extend .my-alert;
     background : #ffe591;
